{
    "name": "InputSys",
    "maps": [
        {
            "name": "MainAction",
            "id": "9a8a25f6-c357-466f-9474-78caf7aabe96",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "3c1d7db4-325c-46d6-bd17-9b3aa8a6b656",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "0fa62ced-aff7-4668-8719-3c35e04bf1d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae2e92ea-779f-435f-8f32-2e8765ccbc19",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "defaultMobile",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d23442a2-df0b-4e9e-b1be-efa62ef2a7d1",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "defaultMobile",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "defaultMobile",
            "bindingGroup": "defaultMobile",
            "devices": []
        }
    ]
}